--- a/frontend/src/Styles/Header.module.css
+++ b/frontend/src/Styles/Header.module.css
@@ -2,6 +2,11 @@ header {
 	margin: 1.5rem auto;
 }
 
+.container{
+	margin: 1.5rem;
+	text-align: center;
+}
+
 li {
 	list-style-type: none;
 }
@@ -11,6 +16,7 @@ li {
 	width: 100%;
 	height: 100%;
 }
+
 
 .container__img {
 	max-height: 300px;
