--- a/frontend/src/Styles/Search.module.css
+++ b/frontend/src/Styles/Search.module.css
@@ -1,6 +1,8 @@
 .container{
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
 }
 
 .container__search-buttons{
@@ -16,4 +18,8 @@
 .container__filtered-items{
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+}
+
+.container__search-buttons-item{
+  max-width: 70px;
 }
