--- a/frontend/src/Styles/Fragrance.module.css
+++ b/frontend/src/Styles/Fragrance.module.css
@@ -11,3 +11,12 @@
   flex-grow: 1;
 
 }
+.container__fragrance-img{
+  height: 150px;
+}
+
+.container__fragrance-img img{
+  max-height: 100%;
+  width: auto;
+  display: block;
+}
