-Added dynamic routing -dynamic routing based on the id of the fragrance -dynamic css based on the state of where the fragrance card is -Needed to use fragrance wrapper (new component) and passed in the data

--- a/frontend/src/Styles/Search.module.css
+++ b/frontend/src/Styles/Search.module.css
@@ -4,14 +4,16 @@
 }
 .container__forms {
 	display: flex;
-	justify-content: flex-end;
-	align-items: flex-end;
+	justify-content: center;
+	align-items: center;
+	gap: 10px;
 	flex-direction: column;
 }
 
 .container__search-buttons {
 	display: flex;
 	flex-direction: row;
+	gap: 10px;
 }
 
 .container__form-control {
@@ -21,6 +23,10 @@
 .container__filtered-items {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
+	gap: 8px;
+	max-width: 1200px;
+	align-items: center;
+	justify-content: center;
 }
 
 .container__search-buttons-item {
