--- a/frontend/src/Styles/LandingPage.css
+++ b/frontend/src/Styles/LandingPage.css
@@ -39,3 +39,11 @@
   /* object-fit: cover; */
   width: 100%;
 }
+
+.container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
