--- a/frontend/src/Styles/Fragrance.module.css
+++ b/frontend/src/Styles/Fragrance.module.css
@@ -10,14 +10,13 @@
 	box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 	flex-grow: 1;
 	padding: 8px;
-	
 }
 .container__fragrance-img-false {
 	height: 150px;
 }
 
 .container__fragrance-img-false img {
-	max-height: 100%;
+	height: 100%;
 	width: auto;
 	display: block;
 }
@@ -50,27 +49,42 @@
 	align-items: center;
 }
 
-.container__buttons button{
+.container__buttons button {
 	height: 40px;
 }
 
-.container__quantity{
+.container__quantity {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	
 }
-.wrapper__quantity-state{
+.wrapper__quantity-state {
 	display: flex;
 	justify-content: center;
 }
 
-.quantity-button{
+.quantity-button {
 	height: 32px !important;
 	text-align: center;
 }
 
-.wrapper__buttons{
+.wrapper__buttons {
 	display: flex;
-	gap:8px;
+	gap: 8px;
+}
+
+@media (max-width: 430px) {
+	.container__fragrance-img-true {
+		justify-content: center;
+		align-items: center;
+		max-width: 320px;
+		gap: 16px;
+	}
+
+	.container__fragrance-img-true {
+		height: 150px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
 }
