--- a/frontend/src/Styles/Recommender.module.css
+++ b/frontend/src/Styles/Recommender.module.css
@@ -1,9 +1,39 @@
-.container__scrollable .row {
-    overflow-x: auto;
-    white-space: nowrap;
+.container {
+	margin: 16px 0;
+	text-align: center;
+	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+
 }
 
-/* .container__scrollable .col {
-    display: inline-flex;
-    white-space: normal;
-} */
+.container__scrollable {
+	display: flex;
+	overflow-x: auto;
+	white-space: nowrap;
+	max-width: 900px;
+	max-height: 320px;
+}
+.container__scrollable > div {
+	flex: 0 0 auto;
+	margin-right: 16px;
+	max-width: 350px;
+	overflow: scroll;
+	height: 100%;
+}
+
+@media (max-width: 430px) {
+	.container__scrollable {
+		display: flex;
+    flex-direction: column;
+		overflow-y: auto;
+		max-width: 320px;
+		height: 70vh;
+    margin: 56px auto;
+	}
+	.container__scrollable > div {
+		flex: 0 0 auto;
+		margin-right: 16px;
+		max-width: 350px;
+		overflow: scroll;
+		height: 100%;
+	}
+}
