--- a/frontend/src/Styles/SignUpForm.module.css
+++ b/frontend/src/Styles/SignUpForm.module.css
@@ -31,18 +31,17 @@
 	grid-area: item3;
 }
 
-
 .item3 img {
-  width: 100%;
+	width: 100%;
 	height: 100%;
 }
 .item4 {
-  grid-area: item4;
-  margin: 0 auto;
+	grid-area: item4;
+	margin: 0 auto;
 }
 
-.item5{
-  grid-area: item5;
+.item5 {
+	grid-area: item5;
 }
 .custom-form-control {
 	display: flex;
@@ -51,12 +50,22 @@
 	gap: 16px;
 }
 
-@media (max-width: 600px) {
-	.grid-container {
-		grid-template-columns: 1fr; /* Single column on small screens */
-		grid-template-areas:
-			"item1"
-			"item2"
-			"item3";
+@media (max-width: 700px) {
+	.container{
+		width: 320px;
+	}
+	.wrapper__form {
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		margin: 0 auto;
+		justify-items: center;
+		align-items: center;
+		text-align: center;
+	}
+
+	.item3 {
+		visibility: hidden;
+		height: 0px;
 	}
 }
